--- a/public/index.html
+++ b/public/index.html
@@ -263,11 +263,11 @@
 
     pre_fill();
     var kur_share = parseInt(url.get("kural")) - 1;
-    setTimeout(fill_kural, 1000, [kur_share >= 0 && kur_share < 1330 ? kur_share : parseInt(Math.random() * 1330 + 1)]);
+    setTimeout(fill_kural, 500, [kur_share >= 0 && kur_share < 1330 ? kur_share : parseInt(Math.random() * 1330 + 1)]);
 
     function pre_fill() {
 
-        ctx.font = "bold 25px Mukta Malar";
+        ctx.font = "bold 1px Mukta Malar";
         ctx.fillStyle = "white"
         ctx.fillText("தமிழ் திருக்குறள் ", 0, 100);
 
@@ -355,7 +355,7 @@
 
         var j = m2 + 100;
         tam_exp_line.forEach((e, ind) => {
-            j = ctx.measureText(e).fontBoundingBoxAscent + 15 + j;
+            j = ctx.measureText(e).actualBoundingBoxAscent + 25 + j;
             ctx.fillText(e, 50, j);
         })
 
